test: add comprehensive tests for 90%+ coverage and update docs
- Add 49 AuditController tests covering all receiveMessage branches,
  shouldBeExpanded, existsInJourney, and edge cases
- Add 2 Application tests for Spring Boot entry point
- Achieve 98% instruction coverage and 90% branch coverage (JaCoCo)
- Add test dependencies: mockito-inline, byte-buddy, spring-cloud-gcp-pubsub,
  selenium-server, jstyleparser, commons-lang3
- Update README with architecture, testing section, CI/CD, Docker instructions
- Update CONTRIBUTING with development setup and testing guidelines
- Update CHANGELOG with unreleased test and documentation changes

https://claude.ai/code/session_016pf6TNWntUMw62yms2DTsB